Fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,10 @@
     src: local(''), url('/fonts/opensans-semibold.woff2') format('woff2');
   }
 
+  html {
+    @apply overflow-hidden;
+  }
+
   body {
     @apply bg-stone-100 font-body text-stone-500 overflow-x-hidden;
   }
